// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBackgroundImage should accept userland className 1`] = `
<DocumentFragment>
  <div
    class="userland-classname"
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="background-image: url(./path/to/image.jpg);"
      />
      <div
        class="bpk-background-image__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should have inView behavior 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;"
      />
      <div
        class="bpk-background-image__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should have loading behavior 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img"
        style="width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;"
      />
      <div
        class="bpk-image__spinner"
      >
        <span
          class="bpk-spinner bpk-spinner--dark"
        >
          <svg
            aria-hidden="true"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7H1a1 1 0 000 2h2a1 1 0 000-2z"
              opacity=".45"
            />
            <path
              d="M15 7h-2a1 1 0 100 2h2a1 1 0 100-2z"
            />
            <path
              d="M7 13v2a1 1 0 102 0v-2a1 1 0 10-2 0z"
              opacity=".3"
            />
            <path
              d="M7 1v2a1 1 0 002 0V1a1 1 0 00-2 0z"
              opacity=".65"
            />
            <path
              d="M9.634 12.83l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 00-1.732 1z"
              opacity=".25"
            />
            <path
              d="M3.634 2.438l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 10-1.732 1z"
              opacity=".55"
            />
            <path
              d="M11.83 11.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
              opacity=".2"
            />
            <path
              d="M1.438 5.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
              opacity=".5"
            />
            <path
              d="M12.83 6.366l1.732-1a1 1 0 00-1-1.732l-1.732 1a1 1 0 001 1.732z"
              opacity=".85"
            />
            <path
              d="M2.438 12.366l1.732-1a1 1 0 10-1-1.732l-1.732 1a1 1 0 101 1.732z"
              opacity=".4"
            />
            <path
              d="M11.366 4.17l1-1.732a1 1 0 00-1.732-1l-1 1.732a1 1 0 001.732 1z"
              opacity=".75"
            />
            <path
              d="M5.366 14.562l1-1.732a1 1 0 10-1.732-1l-1 1.732a1 1 0 001.732 1z"
              opacity=".35"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should render correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="background-image: url(./path/to/image.jpg);"
      />
      <div
        class="bpk-background-image__content"
      >
        <div
          style="opacity: 0.7;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should render correctly when overriding src 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
      />
      <div
        class="bpk-background-image__content"
      >
        <div
          style="opacity: 0.7;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
